<resources>
    <string name="app_name">오늘뭐보지</string>

    <string name="string_home">홈</string>
    <string name="string_write">글쓰기</string>
    <string name="string_setting">설정</string>

    <string name="string_fragment_write">글쓰기프래그먼트</string>
    <string name="string_fragment_home">홈프래그먼트</string>
    <string name="string_fragment_setting">세팅프래그먼트</string>

<!--    fragment_search-->
    <string name="title">작품검색</string>
    <string name="frozen">겨울왕국</string>
    <string name="more">
        리뷰를 작성해주세요
    </string>
    
<!--    fragment_setting-->
    <string name="review">내가 남긴 후기</string>
    <string name="wish">내가 찜한 작품</string>
    <string name="clause">약관</string>
    <string name="notify">공지사항</string>

<!--    fragment_home-->
    <string name="home_text">이런 작품 어때요?</string>
    <string name="home_text02">어디서도 볼 수 없는 오늘뭐보지의 추천작, 지금 만나보세요</string>

<!--    fragment_write-->
    <string name="write_title">후기 작성</string>
    <string name="write_complete">작성 완료</string>
    <string name="write_rate">0.0</string>

<!--    fragment_more-->
    <string name="movie01_title">콜</string>
    <string name="movie01_text">2020년 11월 27일에 넷플릭스를 통해 공개된 한국 영화. 서로 다른 시간에 살고 있는 두 여자가 한 통의 전화로 연결되며 벌어지는 이야기를 그린 스릴러물. 2015년에 몸 값이라는 단편 영화로 단편영화제에서 두각을 나타낸 이충현 감독의 장편 데뷔작이다.원래 2020년 3월 개봉 예정이었으나, 코로나19 사태로 인해 극장에서의 개봉을 취소하고 넷플릭스에서 오리지널 영화로 독점 공개했다.# 사냥의 시간 이후 두 번째로 극장 개봉 없이 넷플릭스에서 독점공개되는 국내 영화다.</string>
    <string name="movie02_title">모가디슈</string>
    <string name="movie02_text">"제 42회 청룡영화상 올해 가장 흥행한 영화 및 미술 부분, 연출 부분, 최우수 작품 부분 수상작"\n2021년 7월 28일에 개봉한 한국 영화. 류승완의 11번째 연출작이기도 하다. 1991년 소말리아 내전 당시, 대한민국과 북한의 대사관 공관원들이 고립된 뒤 함께 목숨을 걸고 소말리아의 수도인 모가디슈를 탈출했던 실제 사건을 모티브로 제작되었으며, 대한민국 외교공관 철수를 주제로 촬영한 한국 최초의 영화이기도 하다.</string>
    <string name="movie03_title">사이버 지옥: n번방을 무너뜨려라</string>
    <string name="movie03_text">n번방 성착취물 제작 및 유포 사건을 소재로 한 넷플릭스 오리지널 다큐멘터리</string>
    <string name="movie04_title">기생충</string>
    <string name="movie04_text">"이 영화는 악인이 없으면서도 비극이고, 광대가 없는데도 희극이다." \n2019년에 개봉된 봉준호 감독의 7번째 장편 영화. 상류층과 하류층. 두 가족의 만남을 다룬 대한민국의 블랙 코미디 가족 드라마 영화다.</string>
    <string name="movie05_title">엑시트</string>
    <string name="movie05_text">짠내 폭발 청년백수, 전대미문의 진짜 재난을 만나다!
대학교 산악 동아리 에이스 출신이지만
졸업 후 몇 년째 취업 실패로 눈칫밥만 먹는 용남은
온 가족이 참석한 어머니의 칠순 잔치에서
연회장 직원으로 취업한 동아리 후배 의주를 만난다
어색한 재회도 잠시, 칠순 잔치가 무르익던 중
의문의 연기가 빌딩에서 피어 오르며
피할 새도 없이 순식간에 도심 전체는 유독가스로 뒤덮여 일대혼란에 휩싸이게 된다.
용남과 의주는 산악 동아리 시절 쌓아 뒀던 모든 체력과 스킬을 동원해
탈출을 향한 기지를 발휘하기 시작하는데…</string>
    <string name="movie06_title">시동</string>
    <string name="movie06_text">정체불명 단발머리 주방장 ‘거석이형’(마동석)을 만난 어설픈 반항아 ‘택일’(박정민)과
무작정 사회로 뛰어든 의욕충만 반항아 ‘상필’(정해인)이 진짜 세상을 맛보는 유쾌한 이야기를 그린 작품이다.</string>

    <string-array name="titles_array">
        <item>스내치</item>
        <item>스미스씨 워싱턴에 가다</item>
        <item>스윙걸즈</item>
        <item>스윙키즈</item>
        <item>스쿨 오브 락</item>
        <item>스타워즈 에피소드 1: 보이지 않는 위험</item>
        <item>스타워즈 에피소드 2: 클론의 습격</item>
        <item>스타워즈 에피소드 3: 시스의 복수</item>
        <item>스타워즈 에피소드 4: 새로운 희망</item>
        <item>스타워즈 에피소드 5: 제국의 역습</item>
        <item>스타워즈 에피소드 6: 제다이의 귀환</item>
        <item>스타워즈: 깨어난 포스</item>
        <item>스타워즈: 더 라스트 제다이</item>
        <item>스타워즈: 라이즈 오브 스카이워커</item>
        <item>스파이더맨</item>
        <item>스파이더맨 2</item>
        <item>스파이더맨 3</item>
        <item>스파이더맨: 뉴 유니버스</item>
        <item>스파이더맨: 파 프롬 홈</item>
        <item>스파이더맨: 홈커밍</item>
        <item>스펜서</item>
        <item>스포트라이트</item>
        <item>스플라이스</item>
        <item>스플릿</item>
        <item>스피드</item>
        <item>승리호</item>
    </string-array>

    <string name="review_item_title">스파이더맨: 파 프로 홈</string>
    <string name="review_item_rating">4.0</string>
    <string name="review_item_date">2022-06-03</string>

    <string name="review_title">후기 작성하기</string>

    <string name="my_title">내가 남긴 후기</string>
</resources>