<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/my_my_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/main_red"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"/>

    <ImageView
        android:id="@+id/my_back_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icon_back"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/my_rate_5_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" / 5.0"
        android:textColor="@color/main_red"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/my_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_item_rating"
        android:textColor="@color/main_red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/my_rate_5_tv"
        app:layout_constraintTop_toTopOf="@id/my_rate_5_tv"/>

    <TextView
        android:id="@+id/my_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_item_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/my_my_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/my_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie05_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/my_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/my_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_item_date"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_rate_5_tv"/>



</androidx.constraintlayout.widget.ConstraintLayout>