<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/item_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/review_item_rating"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/item_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/review_item_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/item_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_item_date"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/item_title_tv"
        app:layout_constraintEnd_toEndOf="@id/item_rating_tv"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_gray"
        app:layout_constraintTop_toBottomOf="@id/item_date_tv"
        app:layout_constraintStart_toStartOf="@id/item_title_tv"
        app:layout_constraintEnd_toEndOf="@id/item_rating_tv"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>