<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/write_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/main_red"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"/>

<!--    <EditText-->
<!--        android:id="@+id/write_movietitle_et"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="75dp"-->
<!--        android:inputType="text"-->
<!--        android:hint="@string/frozen"-->
<!--        android:imeOptions="actionSearch"-->
<!--        android:textSize="18sp"-->
<!--        android:backgroundTint="@color/main_red"-->
<!--        app:layout_constraintTop_toBottomOf="@id/write_text_tv"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_margin="30dp"/>-->
    <AutoCompleteTextView
        android:id="@+id/write_movietitle_et"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/frozen"
        android:textSize="18sp"
        android:completionThreshold="1"
        android:backgroundTint="@color/main_red"
        app:layout_constraintTop_toBottomOf="@id/write_text_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"/>
    
    <ImageView
        android:id="@+id/wrtie_star_01_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_on"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/write_movietitle_et"
        app:layout_constraintTop_toBottomOf="@id/write_movietitle_et"/>

    <ImageView
        android:id="@+id/wrtie_star_02_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_on"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_01_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_01_iv"/>

    <ImageView
        android:id="@+id/wrtie_star_03_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_on"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_02_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_01_iv"/>

    <ImageView
        android:id="@+id/wrtie_star_04_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_on"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_03_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_01_iv"/>

    <ImageView
        android:id="@+id/wrtie_star_05_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_on"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_04_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_01_iv"/>

    <ImageView
        android:id="@+id/wrtie_star_off_01_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_off"
        app:layout_constraintStart_toStartOf="@id/write_movietitle_et"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_01_iv"

        />

    <ImageView
        android:id="@+id/wrtie_star_off_02_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_off"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_off_01_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_off_01_iv"
        />

    <ImageView
        android:id="@+id/wrtie_star_off_03_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_off"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_off_02_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_off_01_iv" />

    <ImageView
        android:id="@+id/wrtie_star_off_04_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_off"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_off_03_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_off_01_iv" />

    <ImageView
        android:id="@+id/wrtie_star_off_05_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_star_off"
        app:layout_constraintStart_toEndOf="@id/wrtie_star_off_04_iv"
        app:layout_constraintTop_toTopOf="@id/wrtie_star_off_01_iv"/>

    <TextView
        android:id="@+id/wrtie_rate_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/write_rate"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/main_red"
        app:layout_constraintTop_toBottomOf="@id/wrtie_star_off_01_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/wrtie_complete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_complete"
        android:textSize="25sp"
        android:backgroundTint="@color/main_red"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/wrtie_text_et"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="30dp"
        android:backgroundTint="@color/main_red"
        app:layout_constraintTop_toBottomOf="@id/wrtie_star_off_01_iv"
        app:layout_constraintBottom_toTopOf="@id/wrtie_complete_btn"
        android:hint="@string/more"
        android:gravity="left"/>



</androidx.constraintlayout.widget.ConstraintLayout>